--- a/RecipeApp/app/src/main/res/layout/activity_main.xml
+++ b/RecipeApp/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recyclerview_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:layout_margin="8dp">
+    tools:context=".MainActivity" />
 
-    <GridView
-        android:id="@+id/grid_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:horizontalSpacing="8dp"
-        android:verticalSpacing="8dp"
-        android:numColumns="2"/>
-
-</FrameLayout>
